<resources>
    <string name="app_name">PMS</string>

    <string name="login_hint_username">username</string>
    <string name="login_hint_password">password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_goto_registration_text">do not have an account yet?</string>
    <string name="login_goto_registration_link">REGISTER</string>

    <string name="create_email">email</string>
    <string name="create_username">username</string>
    <string name="create_password">password</string>
    <string name="create_confirm_password">confirm password</string>
    <string name="create_create_button">Sign Up</string>
    <string name="create_goto_login_text">oops, already have an account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_userName">Your username has to be 5 to 20 alphanumeric characters long</string>
    <string name="invalid_password">Your password has to be 8 to 10 characters long AND do not contain spaces</string>
    <string name="password_mismatch">Your passwords do not match</string>

    <string name="overview_your_playlists">Your Playlists</string>

</resources>
