<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/create_email"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:hint="@string/create_email"
        android:textColorHint="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/create_username"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/create_username"
        android:textColorHint="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/create_password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/create_password"
        android:textColorHint="@color/colorPrimaryDark"/>
    <EditText
        android:id="@+id/create_confirm_password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/create_confirm_password"
        android:textColorHint="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_create_button"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/create_goto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_goto_login_text"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>


</LinearLayout>