<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="180dp"
        android:hint="@string/login_hint_username"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="text|textNoSuggestions"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_hint_password"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textNoSuggestions|textPassword"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_login_button"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_goto_registration_text"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/login_goto_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:text="@string/login_goto_registration_link"/>

    </LinearLayout>


</LinearLayout>